--- a/es2.html
+++ b/es2.html
@@ -12,7 +12,7 @@
         <nav>
             Navigazione
             <ul>
-                <li><a href="es2p2.html">altra pagina</a></li>
+                <li><a href="es2p2.html">pagina 2</a></li>
             </ul>
         </nav>
     </header>
