--- a/es2p2.html
+++ b/es2p2.html
@@ -11,6 +11,9 @@
     <header>
         <nav>
             Navigazione
+            <ul>
+                <li><a href="es2.html">torna indietro</a></li>
+            </ul>
         </nav>
     </header>
 </body>
